# rcm_agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  ITERATION_OPTIONS.md  Makefile  PHASE_PLAN.md  PLAN.md  README.md  pyproject.toml
.cursor/skills/run-lint/: SKILL.md
.github/workflows/: ci.yml
data/artifacts/ENC-001/: claim_837_ENC-001.json  (+2 more)
data/eval/: golden.json
data/examples/: encounter_001_routine_visit.json  encounter_002_mri_with_auth.json  encounter_003_inpatient_surgery.json  encounter_004_denial_scenario.json  encounter_005_eligibility_mismatch.json  encounter_006_denial_co4_only.json  encounter_007_duplicate_claim.json  encounter_008_auth_denied.json
docs/: EVAL.md  EVAL_IMPLEMENTATION_PROMPT.md  INTEGRATIONS.md
src/rcm_agent/: __init__.py  exceptions.py  main.py
tests/: __init__.py  conftest.py  test_async_clients.py  test_claims_backend.py  test_claims_dispatch.py  test_claims_submission_crew.py  test_claims_tools.py  test_cli.py  test_coding_crew.py  test_coding_tools.py  test_config.py  test_connection_manager.py  test_db.py  test_denial_appeal_crew.py  test_denial_tools.py  test_e2e_eval.py  test_eligibility_crew.py  test_eligibility_tools.py  test_escalation.py  test_eval_e2e_integration.py  test_exceptions.py  test_integrations.py  test_intelligent_routing.py  test_migrations.py  test_mock_server.py  test_models.py  test_observability.py  test_prior_auth_crew.py  test_prior_auth_tools.py  test_rag.py  test_rag_real_index.py  test_router.py  test_smoke.py  test_structured_logging_integration.py  test_stub_crew.py
(+62 files in other folders)
